fix: fix test on unix